<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:visible="true" android:title="@string/expand_all_menu" android:numericShortcut="1" android:enabled="true"
		android:titleCondensed="@string/expand_all_condensed" android:id="@+id/context_menu_expand_all"
		android:alphabeticShortcut="a"></item>
	<item android:titleCondensed="@string/expand_menu_condensed" android:title="@string/expand_menu"
		android:visible="true" android:enabled="true" android:numericShortcut="2" android:alphabeticShortcut="e" android:id="@+id/context_menu_expand_item"></item>
	<item android:visible="true" android:id="@+id/context_menu_collapse" android:title="@string/collapse_all_menu"
		android:alphabeticShortcut="c" android:numericShortcut="3" android:enabled="true" android:titleCondensed="@string/collapse_all_condesed"></item>
    <item android:visible="true" android:id="@+id/context_menu_delete" android:title="@string/delete_menu"
        android:alphabeticShortcut="d" android:numericShortcut="4" android:enabled="true" android:titleCondensed="@string/delete_menu_condensed"></item>
</menu>
